--- a/styles/main.css
+++ b/styles/main.css
@@ -2,13 +2,13 @@
      -moz-box-sizing: border-box;
      -webkit-box-sizing: border-box;
      box-sizing: border-box;
- } 
+ }
 
 html {
      height: 100%; /* makes sure our HTML takes up 100% of the browser window */
      font-size: 100%;
  }
- 
+
  body {
      font-family: 'Open Sans'; /* sets our font to the "Open Sans" typeface */
      color: white;             /* sets the text color to white */
@@ -19,7 +19,7 @@ html {
      padding: 0.5rem;
      background-color: rgb(101,18,95);
  }
- 
+
  .navbar .logo {
      position: relative; /* positioning will be explained in a resource */
      left: 2rem;
@@ -34,13 +34,13 @@ html {
  @media (min-width: 640px) {
      html { font-size: 112%; }
    /* Style information will go here */
-     
+
     .column {
          float: left;
          padding-left: 1rem;
          padding-right: 1rem;
      }
-     
+
      .column.full { width: 100%; }
      .column.two-thirds { width: 66.7%; }
      .column.half { width: 50%; }
@@ -48,9 +48,25 @@ html {
      .column.fourth { width: 25%; }
      .column.flow-opposite { float: right; }
  }
- 
+
  /* Large screens (1024px) */
  @media (min-width: 1024px) {
      html { font-size: 120%; }
    /* Style information will go here */
  }
+
+ .clearfix::before,
+
+ .clearfix::after {
+
+   content: " ";
+
+   display: table;
+
+}
+
+  .clearfix::after {
+
+   clear: both;
+
+}
