--- a/styles/landing.css
+++ b/styles/landing.css
@@ -35,15 +35,17 @@
      padding: 2rem;
      text-align: center;
      opacity: 0; 
-    -webkit-transform: scaleX(0.9) translateY(3rem);
-    -moz-transform: scaleX(0.9) translateY(3rem);
-    transform: scaleX(0.9) translateY(3rem);
-    -webkit-transition: all 0.25s ease-in-out;
-    -moz-transition: all 0.25s ease-in-out;
-    transition: all 0.25s ease-in-out;
+    -webkit-transform: scaleX(2) translateY(6rem);
+    -moz-transform: scaleX(2) translateY(6rem);
+    transform: scaleX(2) translateY(6rem);
+    -webkit-transition: all 1.0s ease-in-out;
+    -moz-transition: all 1.0s ease-in-out;
+    transition: all 1.0s ease-in-out;
     -webkit-transition-delay: 0.2s;
     -moz-transition-delay: 0.2s;
     transition-delay: 0.2s;
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
  }
 
  .point .point-title {
